--- a/4. Logistic regression/notes.Rmd
+++ b/4. Logistic regression/notes.Rmd
@@ -14,9 +14,9 @@ credit.data <- read.csv("http://homepages.uc.edu/~maifg/7040/credit0.csv", heade
 
 Now split the data 90/10 as training/testing datasets:
 ```{r}
-subset <- sample(nrow(credit.data),nrow(credit.data)*0.90)
-credit.train = credit.data[subset,]
-credit.test = credit.data[-subset,]
+sample_index <- sample(nrow(credit.data),nrow(credit.data)*0.90)
+credit.train = credit.data[sample_index,]
+credit.test = credit.data[-sample_index,]
 ```
 The training dataset has 63 variables, 4500 obs. 
 ```{r}
@@ -60,7 +60,7 @@ BIC(credit.glm1)
 ### Understanding classification decision making using logistic regression
 To get prediction from a logistic regression model, there are several steps you need to understand. Refer to textbook/slides for detailed math.
 
-1.The fitted model $\hat{\eta} = b_0 +b_1 x_1 + b_2 x_2 + ...$ gives you the estimated value before the inverse of link (logit in case of logistic regression). In logistic regression the $\hat{\eta}$ are called **log odds ratio**, which is $\log(P(y=1)/(1-P(y=1)))$. In R you use the *predict()* function to get a vector of all in-sample \hat{\eta} (for each training ob).
+1.The fitted model $\hat{\eta} = b_0 +b_1 x_1 + b_2 x_2 + ...$ gives you the estimated value before the inverse of link (logit in case of logistic regression). In logistic regression the $\hat{\eta}$ are called **log odds ratio**, which is $\log(P(y=1)/(1-P(y=1)))$. In R you use the *predict()* function to get a vector of all in-sample $\hat{\eta}$ (for each training ob).
 ```{r, fig.width=4, fig.height=4}
 hist(predict(credit.glm1))
 ```
@@ -152,6 +152,8 @@ library(ROCR)
 pred <- prediction(prob.glm1.outsample, credit.test$Y)
 perf <- performance(pred, "tpr", "fpr")
 plot(perf, colorize=TRUE)
+#Get the AUC
+unlist(slot(performance(pred, "auc"), "y.values"))
 ```
 
 
@@ -210,6 +212,7 @@ for(i in 1:length(searchgrid))
   result[i,2] <- cost1(credit.train$Y, predict(credit.glm1,type="response"))
 }
 plot(result, ylab="Cost in Training Set")
+result[which.min(result[,2]),]
 ```
 
 Alternatively, you can use the cross validation to choose the best cut-off probability.
@@ -220,7 +223,7 @@ cost1 <- function(r, pi){
   weight1 = 10
   weight0 = 1
   c1 = (r==1)&(pi<pcut) #logical vector - true if actual 1 but predict 0
-  c0 = (r==0)&(pi>pcut) #logical vecotr - true if actual 0 but predict 1
+  c0 = (r==0)&(pi>pcut) #logical vector - true if actual 0 but predict 1
   return(mean(weight1*c1+weight0*c0))
 }
 credit.glm1<-glm(Y~X3+X8+X11_2,family=binomial,credit.train); 
@@ -230,12 +233,13 @@ for(i in 1:length(searchgrid))
   result[i,2] <- cv.glm(data=credit.train,glmfit=credit.glm1,cost=cost1, K=3)$delta[2]
 }
 plot(result, ylab="CV Cost")
+result[which.min(result[,2]),]
 ```
 
 
 Starter code for German credit scoring
 -----------------
-Refer to [http://archive.ics.uci.edu/ml/datasets/Statlog+(German+Credit+Data)](http://archive.ics.uci.edu/ml/datasets/Statlog+(German+Credit+Data)) for variable description.
+Refer to http://archive.ics.uci.edu/ml/datasets/Statlog+(German+Credit+Data) for variable description.
 Notice that "It is worse to class a customer as good when they are bad (5), than it is to class a customer as bad when they are good (1)." Define your cost function accordingly!
 
 ```{r,eval=FALSE}
