--- a/4. Logistic regression/notes.Rmd
+++ b/4. Logistic regression/notes.Rmd
@@ -174,7 +174,7 @@ cost2 <- function(r, pi){
   weight1 = 2
   weight0 = 1
   c1 = (r==1)&(pi<pcut) #logical vector - true if actual 1 but predict 0
-  c0 = (r==0)&(pi>pcut) #logical vecotr - true if actual 0 but predict 1
+  c0 = (r==0)&(pi>pcut) #logical vector - true if actual 0 but predict 1
   return(mean(weight1*c1+weight0*c0))
 }
 ```
@@ -201,7 +201,7 @@ cost1 <- function(r, pi){
   weight1 = 10
   weight0 = 1
   c1 = (r==1)&(pi<pcut) #logical vector - true if actual 1 but predict 0
-  c0 = (r==0)&(pi>pcut) #logical vecotr - true if actual 0 but predict 1
+  c0 = (r==0)&(pi>pcut) #logical vector - true if actual 0 but predict 1
   return(mean(weight1*c1+weight0*c0))
 }
 credit.glm1<-glm(Y~X3+X8+X11_2,family=binomial,credit.train); 
